# linchat

./: .gitignore  chat_server.py  prepare_for_upload.py  run_server_locally.sh
backend/: pyproject.toml
backend/.vscodedebug/: debugmain.py
backend/src/: test.py
backend/src/linchat_backend/: main.py
frontend/: README.md  package-lock.json  package.json  webpack.config.js
frontend/src/: asyncwebsocket.js  chatcommunication.js  chatunit.js  chatview.js  index.html  main.js  messageview.js  splitview.js  styles.js  view.js  websocketconversation.js
old/: .gitignore  README.md  static_file_server.py
www/: index.html
