[project]
name = "linchat_backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Richter", email = "patrick-richter@posteo.de"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
simplepyscript = "linchat_backend.main:main"
